deployment/Kubernetes/overlays/ordina/staging/enroll/enroll-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enroll-ingress
spec:
  tls:
    - hosts:
        - enroll.staging.rap.tarski.nl
      secretName: enroll-tls-staging
  rules:
    - host: enroll.staging.rap.tarski.nl
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: enroll
                port:
                  number: 80
